# Graduation-Design

./: CMakeLists.txt  README.md  S99myapp  astronut.json  lv_conf.h  main.c  开发杂记.txt
app/: control_device.c  control_device.h  rvc_test.c  rvc_test.h  sensor_device.c  sensor_device.h
lvgl/src/drivers/display/drm/: lv_linux_drm.c
lvgl/src/drivers/display/fb/: lv_linux_fbdev.c  lv_linux_fbdev.h
lvgl/src/drivers/wayland/: wayland_xdg_shell.h
mqtt_example/: Makefile  mqtt_test  mqtt_test.c
